{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 1215,
  "lineage": "c0d2c884-7b02-f877-113b-f69f907d02fb",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:618965466527:security-group/sg-0a074052f8ccfb53f",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0a074052f8ccfb53f",
            "ingress": [],
            "name": "chaos_genius-poc-cluster-2022022419131533710000000a",
            "name_prefix": "chaos_genius-poc-cluster-",
            "owner_id": "618965466527",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chaos_genius-poc-cluster"
            },
            "tags_all": {
              "Name": "chaos_genius-poc-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccf3eef7a22febd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:618965466527:security-group/sg-05a00444f48e416a3",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-05a00444f48e416a3",
            "ingress": [],
            "name": "chaos_genius-poc-node-20220224191315315600000009",
            "name_prefix": "chaos_genius-poc-node-",
            "owner_id": "618965466527",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chaos_genius-poc-node",
              "kubernetes.io/cluster/chaos_genius-poc": "owned"
            },
            "tags_all": {
              "Name": "chaos_genius-poc-node",
              "kubernetes.io/cluster/chaos_genius-poc": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccf3eef7a22febd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2292480975",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a074052f8ccfb53f",
            "self": false,
            "source_security_group_id": "sg-05a00444f48e416a3",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2683949004",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a074052f8ccfb53f",
            "self": false,
            "source_security_group_id": "sg-05a00444f48e416a3",
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2108093864",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a074052f8ccfb53f",
            "self": false,
            "source_security_group_id": "sg-05a00444f48e416a3",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2053796986",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a00444f48e416a3",
            "self": false,
            "source_security_group_id": "sg-0a074052f8ccfb53f",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-2262444113",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a00444f48e416a3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-1493439823",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a00444f48e416a3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-664416322",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-05a00444f48e416a3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2251739864",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a00444f48e416a3",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-139546814",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-05a00444f48e416a3",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-470323220",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a00444f48e416a3",
            "self": false,
            "source_security_group_id": "sg-0a074052f8ccfb53f",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1765709303",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a00444f48e416a3",
            "self": false,
            "source_security_group_id": "sg-0a074052f8ccfb53f",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4269531846",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a00444f48e416a3",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1512325417",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-05a00444f48e416a3",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"first\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:618965466527:security-group/sg-0139967169a896536",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0139967169a896536",
            "ingress": [],
            "name": "first-eks-node-group-20220224191314817500000008",
            "name_prefix": "first-eks-node-group-",
            "owner_id": "618965466527",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "first-eks-node-group",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "first-eks-node-group",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccf3eef7a22febd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0170b8c4dbd6d3c8a",
            "domain": "vpc",
            "id": "eipalloc-0170b8c4dbd6d3c8a",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-7-184-146.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.184.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "tags_all": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:618965466527:internet-gateway/igw-0c9e273f8e3b2efba",
            "id": "igw-0c9e273f8e3b2efba",
            "owner_id": "618965466527",
            "tags": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "tags_all": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "vpc_id": "vpc-0ccf3eef7a22febd5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0170b8c4dbd6d3c8a",
            "connectivity_type": "public",
            "id": "nat-05d3df6acc8903208",
            "network_interface_id": "eni-02ffe4593a0821b33",
            "private_ip": "10.0.101.75",
            "public_ip": "3.7.184.146",
            "subnet_id": "subnet-0dffb60e9b659ee6c",
            "tags": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "tags_all": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0443d1bcf8b4f2dd41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05d3df6acc8903208",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0443d1bcf8b4f2dd4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c9e273f8e3b2efba",
            "id": "r-rtb-01d095c6c66d9a1a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01d095c6c66d9a1a9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:618965466527:route-table/rtb-0443d1bcf8b4f2dd4",
            "id": "rtb-0443d1bcf8b4f2dd4",
            "owner_id": "618965466527",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "tags_all": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccf3eef7a22febd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:618965466527:route-table/rtb-01d095c6c66d9a1a9",
            "id": "rtb-01d095c6c66d9a1a9",
            "owner_id": "618965466527",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "tags_all": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccf3eef7a22febd5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bb6bdf3106e01f1",
            "route_table_id": "rtb-0443d1bcf8b4f2dd4",
            "subnet_id": "subnet-01c0b07f2d5f2d28c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b415d170114069d7",
            "route_table_id": "rtb-0443d1bcf8b4f2dd4",
            "subnet_id": "subnet-0af4cdee0f351af68"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3228af1466375eb",
            "route_table_id": "rtb-0443d1bcf8b4f2dd4",
            "subnet_id": "subnet-034ec6001987ad9d8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091e0881eab88f547",
            "route_table_id": "rtb-01d095c6c66d9a1a9",
            "subnet_id": "subnet-0dffb60e9b659ee6c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d54a139769d9ae91",
            "route_table_id": "rtb-01d095c6c66d9a1a9",
            "subnet_id": "subnet-008dd91ed4cd4f2f9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1c3c07ccf90c18d",
            "route_table_id": "rtb-01d095c6c66d9a1a9",
            "subnet_id": "subnet-079cc53b7b97a29cd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:618965466527:subnet/subnet-01c0b07f2d5f2d28c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c0b07f2d5f2d28c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "618965466527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "tags_all": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "vpc_id": "vpc-0ccf3eef7a22febd5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:618965466527:subnet/subnet-0af4cdee0f351af68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af4cdee0f351af68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "618965466527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "tags_all": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "vpc_id": "vpc-0ccf3eef7a22febd5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:618965466527:subnet/subnet-034ec6001987ad9d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034ec6001987ad9d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "618965466527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "tags_all": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "vpc_id": "vpc-0ccf3eef7a22febd5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:618965466527:subnet/subnet-0dffb60e9b659ee6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dffb60e9b659ee6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "618965466527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "tags_all": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "vpc_id": "vpc-0ccf3eef7a22febd5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:618965466527:subnet/subnet-008dd91ed4cd4f2f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008dd91ed4cd4f2f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "618965466527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "tags_all": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "vpc_id": "vpc-0ccf3eef7a22febd5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:618965466527:subnet/subnet-079cc53b7b97a29cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079cc53b7b97a29cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "618965466527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "tags_all": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "vpc_id": "vpc-0ccf3eef7a22febd5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:618965466527:vpc/vpc-0ccf3eef7a22febd5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05d8f8749404fabb9",
            "default_route_table_id": "rtb-00578f5db2d36280f",
            "default_security_group_id": "sg-03d2ae6dda311e71f",
            "dhcp_options_id": "dopt-a18d6eca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ccf3eef7a22febd5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00578f5db2d36280f",
            "owner_id": "618965466527",
            "tags": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            },
            "tags_all": {
              "Name": "chaos_genius-poc-vpc",
              "company": "ChaosGenius",
              "env": "poc",
              "project": "ChaosGenius-k8s-scaling"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}